src/tests/evaluation_error/type_mismatch_minus_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_minus_infix_expression__test_type_mismatch_minus_infix_expression_case_4_lexical_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_minus_infix_expression/mod.rs
expression: tokens
---
[
    String {
        literal: "123",
    },
    Minus,
    Integer {
        literal: 10,
    },
    EndOfFile,
]
